--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
-
+Carlos Eduardo S. Castro 2C 27.08.24
 header {
     border-bottom: solid 5px red;
     padding: 20px;
@@ -13,7 +13,7 @@ header {
     color :red;
 }
 
-.chamada {
+.chamada 
     background: black;
     padding-bottom: 80px;
     padding-top: 80px;
