--- a/style.css
+++ b/style.css
@@ -5,15 +5,14 @@ body {
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
-Carlos Eduardo S. Castro 2C 27.08.24
+
 header {
     border-bottom: solid 5px red;
     padding: 20px;
     font-size: 70px;
     color :red;
 }
-
-.chamada 
+.chamada {
     background: black;
     padding-bottom: 80px;
     padding-top: 80px;
@@ -33,7 +32,7 @@ p {
     font-size: 20px;
 }
 
-.categoria-videos {
+.categoria-videos 
     display: flex;
     overflow-x: auto;
     gap: 10px;
@@ -45,12 +44,12 @@ p {
     margin-top: 50px;
 }
 
-.categoria-videos img {
+.categoria-videos {
     opacity: 0.5;
     height: 200px;
 }
 
-.categoria-videos img:hover {
+.categoria-videos :hover {
     opacity: 1.0;
     border: 3px solid green;
 }
