--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
     background: black;
     padding-bottom: 80px;
     padding-top: 80px;
-    display: flex;
+    display:flex;
     justify-content: center;
 }
 
@@ -32,7 +32,7 @@ p {
     font-size: 20px;
 }
 
-.categoria-videos 
+.categoria-videos {
     display: flex;
     overflow-x: auto;
     gap: 10px;
