--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
-Carlos Eduardo S. Castro 2C 
+Carlos Eduardo S. Castro 2C 27.08.24
 header {
     border-bottom: solid 5px red;
     padding: 20px;
