--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     font-size: 70px;
     color :red;
 }
-.chamada {
+.chamada 
     background: black;
     padding-bottom: 80px;
     padding-top: 80px;
